tests/common-install-normal.expected.yaml
---
# Source: pattern-install/templates/argocd/namespace.yaml
# Pre-create so we can create our argo app for keeping subscriptions in sync
# Do it here so that we don't try to sync it in the future
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-gitops
