tests/hub-bobbycar-opt-serverless-medical-diagnosis-hub.expected.yaml
---
# Source: bobbycar-opt-serverless/templates/kn-services.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: bobbycar-zone-audit
  namespace: bobbycar
spec:
  template:
    metadata:
      annotations:
        #autoscaling.knative.dev/initialScale: "0"
        autoscaling.knative.dev/window: "10s"
    spec:
      containers:
        - image: gcr.io/knative-releases/knative.dev/eventing/cmd/event_display
---
# Source: bobbycar-opt-serverless/templates/kn-services.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: bobbycar-zone-approval
  namespace: bobbycar
spec:
  template:
    metadata:
      annotations:
        #autoscaling.knative.dev/initialScale: "0"
        autoscaling.knative.dev/window: "10s"
    spec:
      containers:
        - image: gcr.io/knative-releases/knative.dev/eventing/cmd/event_display
---
# Source: bobbycar-opt-serverless/templates/zone-change-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: zone-change-faas
  namespace: bobbycar
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/target: "1"
        #autoscaling.knative.dev/initialScale: "0"
        autoscaling.knative.dev/window: "10s"
    spec:
      containers:
        - image: quay.io/bobbycar/zone-change-service
