tests/all-config-demo-industrial-edge-factory.expected.yaml
---
# Source: config-demo/templates/config-demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: config-demo
  name: config-demo
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: config-demo
    deploymentconfig: config-demo
  sessionAffinity: None
  type: ClusterIP
---
# Source: config-demo/templates/config-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: config-demo
  name: config-demo
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      deploymentconfig: config-demo
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: config-demo
        deploymentconfig: config-demo
      name: config-demo
    spec:
      containers:
      - name: apache
        image: registry.access.redhat.com/ubi8/httpd-24
        #imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /var/www/html
          name: config-demo-configmap
        - mountPath: /var/www/html/secret
          readOnly: true
          name: config-demo-secret
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        livenessProbe:
          httpGet:
            path: /index.html
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
      volumes:
      - name: config-demo-configmap
        configMap:
          defaultMode: 438
          name: config-demo-configmap
      - name: config-demo-secret
        secret:
          secretName: config-demo-secret
---
# Source: config-demo/templates/config-demo-secret-hub-cronjob.yaml
# This is a workaround to update the configdemo-region-secret-policy every five minutes with
# a random timestamp (policy.open-cluster-management.io/trigger-update annotation).
# That way the hub + lookup/fromSecret functions will be retriggered every five minutes
# This won't be needed anymore once https://issues.redhat.com/browse/ACM-1208 lands in ACM
---
# Source: config-demo/templates/config-demo-secret.yaml
# The policy needs to be added to the ACM HUB and then it will be pushed on all clusters
# except the HUB (see placementrule on the bottom)
---
# Source: config-demo/templates/config-demo-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: config-demo
  name: config-demo
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: config-demo
    weight: 100
  wildcardPolicy: None
