tests/hub-bobbycar-core-infra-normal.expected.yaml
---
# Source: bobbycar-core-infra/templates/kafka-bridge-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kafka-bridge
  namespace: bobbycar
spec:
  host: bobbycar-bobbycar.test.cluster.domain.com
  to:
    kind: Service
    name: bobbycar-bridge-service
    weight: 100
  port:
    targetPort: rest-api
  wildcardPolicy: None
